add ld as a part modal

--- a/client/css/app.css
+++ b/client/css/app.css
@@ -1772,6 +1772,37 @@ margin: 10px;
     border-right: none;
 }
 
+.colLDPart0 {
+    width: 15%;
+    float: left;
+    text-align: center;
+    padding-top: 5px;
+
+}
+.colLDPart1 {
+    width: 85%;
+    float: right;
+}
+
+.colLDPart1 p {
+    clear: both;
+    margin: 0;
+    padding: 0;
+}
+.qcerLDList {
+    float: left;
+    padding:0 5px;
+    margin: 0;
+}
+
+.rowLDTable {
+    border: 1px dashed #cccccc;
+    border-radius: 6px;
+    margin: 5px 0 15px;
+    text-align: left;
+
+}
+
 .rowUserLink a, .rowUserLink p {
     color: #666666;
     font-weight: normal;
