--- a/client/views/index.html
+++ b/client/views/index.html
@@ -122,7 +122,7 @@
                             <div class="formLevel">
                                 <div class="errorBox">
                                 </div>
-                                <label class="formLabel formLabel"><i class="icon-flag"></i> QCER Level:</label>
+                                <label class="formLabel formLabel"><i class="icon-signal"></i> QCER Level:</label>
 
                                 <div class="formCheck">
                                     <span ng-show="qcerError">{{ qcerError }}</span>
@@ -141,7 +141,7 @@
                                     <span class="errorTipModal" ng-show="LdCreateForm.ldScope.$error.maxlength">The design scope cannot be longer than 50 characters.</span><span
                                         class="clearfix"></span>
                                 </div>
-                                <label class="formLabel"><i class="icon-time"></i> Design Scope*:</label>
+                                <label class="formLabel"><i class="icon-bell"></i> Design Scope*:</label>
                                 <input class="formInput" type="text" name="ldScope" ng-model="ldScope"
                                        placeholder="typeahead..." required ng-maxlength="50"
                                        ng-pattern="/^[a-zA-Z0-9.,:;... òàùèéì/'/-//@#*]+$/">
