--- a/client/views/partials/ldEditView.html
+++ b/client/views/partials/ldEditView.html
@@ -533,7 +533,7 @@
                         <span class="errorTipModal" ng-show="ActCreateForm.pract_descr.$error.maxlength">Activity description cannot be longer than 2000 characters.</span>
 
                     </div>
-                    <label class="formLabel"><i class="icon-user"></i> Practical Description:</label>
+                    <label class="formLabel"><i class="icon-info-sign"></i> Practical Description:</label>
                     <textarea class="formInput" name="pract_descr" ng-model="pract_descr" rows="5"
                               ng-maxlength="200" ng-pattern="/^[a-zA-Z0-9.,:;... òàùèéì/'/-//@#*]+$/"></textarea>
                     <span class="clearfix"></span>
@@ -544,7 +544,7 @@
                         <span class="errorTipModal" ng-show="ActCreateForm.edu_descr.$error.maxlength">Pedagogical suggestions cannot be longer than 2000 characters.</span>
 
                     </div>
-                    <label class="formLabel"><i class="icon-user"></i> Pedagogical Suggestions:</label>
+                    <label class="formLabel"><i class="icon-question-sign"></i> Pedagogical Suggestions:</label>
                     <textarea class="formInput" name="edu_descr" ng-model="edu_descr" rows="5"
                               ng-maxlength="200" ng-pattern="/^[a-zA-Z0-9.,:;... òàùèéì/'/-//@#*]+$/"></textarea>
                     <span class="clearfix"></span>
