--- a/client/views/partials/home.html
+++ b/client/views/partials/home.html
@@ -8,7 +8,7 @@
                     <h4 class="ld-name-text">
                     {{ learningDesign.ld_name }}</h4>
                 <div class="qcer">
-                    <i class="icon-signal" ng-show="learningDesign.qcers"></i>
+                    <i class="icon-tasks" ng-show="learningDesign.qcers"></i>
                     <span class="qcer-spacer" ng-repeat="qcer in learningDesign.qcers">{{ qcer.qcer_name }}</span>
                 </div>
                 <div class="scope"><i class="icon-bell "></i> {{ learningDesign.ld_scope }}
