--- a/client/views/partials/ld.html
+++ b/client/views/partials/ld.html
@@ -31,7 +31,7 @@
                 <li class="sidebarItem"><a ng-href="#" class="sidebarItemLink">{{subject.subject_name}}</a></li>
             </ul>
         </div>
-        <div class="clear marginTopSidebar"><h5 class="zeroMargin"><i class="icon-tasks"></i> Objectives:</h5>
+        <div class="clear marginTopSidebar"><h5 class="zeroMargin"><i class="icon-screenshot"></i> Objectives:</h5>
             <ul ng-repeat="objective in learningDesign.objectives" class="zeroMargin objectives">
                 <!-- FIXME: add dynamic link to  LDs page with objective.objective_descr as filter -->
                 <li class="sidebarItem"><a ng-href="#" class="sidebarItemLink">{{objective.objective_descr}}</a>
@@ -108,7 +108,7 @@
             <h4>{{learningDesign.ld_name }}</h4>
         </div>
         <div class="titleRight">
-           <div class="titleQcer" ng-show="learningDesign.qcers"><i class="icon-signal icon-white"></i><span ng-repeat="qcer in learningDesign.qcers" class="round qceritem ">{{ qcer.qcer_name }}</span></div>
+           <div class="titleQcer" ng-show="learningDesign.qcers"><i class="icon-tasks icon-white"></i><span ng-repeat="qcer in learningDesign.qcers" class="round qceritem ">{{ qcer.qcer_name }}</span></div>
             <div class="titleScope"><i class="icon-bell icon-white"></i> {{learningDesign.ld_scope }}</div>
         </div>
         <div class="clearfix"></div>
@@ -138,10 +138,10 @@
                                         class="icon-th-large icon-white"></i> {{ child.org_label}}</span>
                             </div>
                             <div class="actLabel" ng-show="child.group_child_type=='LD'">
-                                <span class="timeLabel"><i class="icon-bell icon-white"></i> {{ child.scope}}</span>
-                                    <span class="orgLabel"><i class="icon-signal icon-white"
-                                                              ng-show="child.qcers"></i> <span
-                                            ng-repeat="qcer in child.qcers">{{ qcer.qcer_name }} </span></span>
+                                 <span class="orgLabel"><i class="icon-tasks icon-white"
+                                                           ng-show="child.qcers"></i> <span
+                                         ng-repeat="qcer in child.qcers">{{ qcer.qcer_name }} </span></span><span class="timeLabel"><i class="icon-bell icon-white"></i> {{ child.scope}}</span>
+
                             </div>
                         </a>
                     </div>
@@ -151,17 +151,19 @@
                 <div ng-show="!node.children" class="actName"><a class="whiteText" ng-click="open(node)">
                     <h6>{{ node.node_name }}</h6>
 
-                    <div class="actLabel" ng-show="node.type!='LD'">
+                   <div class="actLabel" ng-show="node.type!='LD'">
                             <span class="timeLabel"><i
                                     class="icon-time icon-white"></i> {{ node | durationDisplay }} <span
                                     ng-show="!(node | durationDisplay)"> Free</span> </span>
                         <span class="orgLabel"><i class="icon-th-large icon-white"></i> {{ node.org_label }}</span>
                     </div>
                     <div class="actLabel" ng-show="node.type=='LD'">
-                        <span class="timeLabel"><i class="icon-bell icon-white"></i> {{ node.scope }}</span>
-                            <span class="orgLabel"><i class="icon-signal icon-white" ng-show="node.qcers"></i> <span
+                            <span class="orgLabel"><i class="icon-tasks icon-white" ng-show="node.qcers"></i> <span
                                     ng-repeat="qcer in node.qcers"> {{ qcer.qcer_name }} </span></span>
+                        <span class="timeLabel"><i class="icon-bell icon-white"></i> {{ node.scope }}</span>
+
                     </div>
+
                 </a>
                 </div>
             </div>
