--- a/client/views/partials/ldedit.html
+++ b/client/views/partials/ldedit.html
@@ -140,7 +140,7 @@
                     <div class="editBox">
                     <div class="errorBoxTab">
                                     <span class="errorTipTab"
-                                          ng-show="(learningDesign.ld_name == 'add a design name') || (learningDesign.ld_name == '') || (LdName.ldName.$dirty && LdName.ldName.$error.required)">Required!</span>
+                                          ng-show="(learningDesign.ld_name == '') || (LdName.ldName.$dirty && LdName.ldName.$error.required)">Required!</span>
                         <span class="errorTipTab" ng-show="LdName.ldName.$error.pattern">The design name cannot contain this symbol.</span>
                         <span class="errorTipTab" ng-show="LdName.ldName.$error.maxlength">The design name cannot be longer than 50 characters.</span>
                     </div>
@@ -151,7 +151,7 @@
             <div class="titleRight">
                 <div class="titleQcer"  ><i class="icon-tasks icon-white"></i>
 
-                                    	<input type="checkbox" ng-model="selectedQcers"> A1
+                                    	<input type="checkbox" ng-model="selectedQcers[qceropt.id]"> A1
                                     	<input type="checkbox" ng-model="selectedQcers[qceropt.id]"> A2
                                     	<input type="checkbox" ng-model="selectedQcers[qceropt.id]"> B1
                                     	<input type="checkbox" ng-model="selectedQcers[qceropt.id]"> B2
@@ -162,7 +162,7 @@
                     <form name="ScopeForm" novalidate="" class="singleForm">
                         <div class="editBox"><div class="errorBoxTab">
                                     <span class="errorTipTab"
-                                          ng-show="ScopeForm.ldScope.$error.required">Required!</span>
+                                          ng-show="(learningDesign.ld_scope == '') || (ScopeForm.ldScope.$dirty && ScopeForm.ldScope.$error.required)">Required!</span>
                             <span class="errorTipTab" ng-show="ScopeForm.ldScope.$error.pattern">The design name cannot contain this symbol.</span>
                             <span class="errorTipTab" ng-show="ScopeForm.ldScope.$error.maxlength">The design name cannot be longer than 50 characters.</span>
                         </div>
@@ -421,7 +421,7 @@
                         <span class="errorTipModal" ng-show="ActCreateForm.actName.$error.pattern">The activity name cannot contain this symbol.</span>
                         <span class="errorTipModal" ng-show="ActCreateForm.actName.$error.maxlength">The activity name cannot be longer than 255 characters.</span>
                     </div>
-                    <label class="formLabel"><i class="icon-ok"></i> Activity Name*:</label>
+                    <label class="formLabel"><i class="icon-file"></i> Activity Name*:</label>
                     <input class="formInput" type="text" name="actName" ng-model="actName" required
                            ng-maxlength="255" ng-pattern="/^[a-zA-Z0-9.,!?:;... òàùèéì/'/-//@#*]+$/">
                     <span class="clearfix"></span>
@@ -612,8 +612,8 @@
 
                                         </div>
                                         <div class=" colLDPart1">
-                                            <p><i class="icon-ok"></i> {{ learningDesign.ld_name }}</p>
-                                            <p><i class="icon-signal float-left"> </i> <span ng-repeat="qcer in learningDesign.qcers" class="qcerLDList"> {{ qcer.qcer_name }}</span> </p><p ng-show="!learningDesign.qcers">Not defined</p>
+                                            <p><i class="icon-book"></i> {{ learningDesign.ld_name }}</p>
+                                            <p><i class="icon-tasks float-left"> </i> <span ng-repeat="qcer in learningDesign.qcers" class="qcerLDList"> {{ qcer.qcer_name }}</span> </p><p ng-show="!learningDesign.qcers">Not defined</p>
 
                                             <p><i class="icon-bell"></i> {{ learningDesign.ld_scope }}</p>
                                             <p><i class="icon-pencil"></i> {{ learningDesign.user_name }} {{ learningDesign.user_last_name }} </p>
