--- a/client/css/app.css
+++ b/client/css/app.css
@@ -298,6 +298,7 @@ a:hover {
     background-color: #0099CC;
     color: #FFFFFF;
     border: 1px dashed #FFFFFF;
+    text-align: center;
 }
 
 #contentHeader h4 {
@@ -637,27 +638,37 @@ font-weight: normal;
 ===================== */
 .errorBoxTab {
     height: 20px;
-    margin: -10px 0 -1px 0;
+    margin: -12px 0 0  0;
     padding: 0;
-    z-index: -1;
-    width: 100%;text-align: right;
+    width: 100%;text-align: center;
 }
 
 .errorTipTab {
     color: #FFFFFF;
-    font-size: 12px;
+    font-size: 10px;
     background-color: #990000;
     padding: 3px;
     border-radius: 4px;
     margin: 0 10px 2px 0;
     font-weight: normal;
 }
+.editBoxLeft {
+    text-align: left;
+}
+.editLabel {
+    margin: 0;
+    padding: 0;
+    display: inline;
+
+
+}
 .editBox {
     text-align: right;
 }
 .editInputName {
-    width: 92%;
+    width: 90%;
     margin: 0;
+    z-index: 1;
 }
 .editInputScope {
     margin: 0;
@@ -877,12 +888,12 @@ input.formInputDuration[type=number]::-webkit-inner-spin-button:after {
     float: right;
     text-align: right;
     padding: 2px 10px;
-    width: 35%;
+    width: 38%;
 }
 .titleQcer {
     margin:5px 0 0 0;
     font-weight: bold;
-    width: 100%;
+    display: inline;
 }
 
 .titleQcer .round {
@@ -891,15 +902,24 @@ input.formInputDuration[type=number]::-webkit-inner-spin-button:after {
 
 .titleScope {
     font-weight: bold;
-    margin: 10px 0 0 0;
-    float: none;
-    text-align: right;
+    margin: 5px 0 0 0;
+}
+.titleLD, .titleScopeName {
+    background-color:#ffffff;
+    color: #990000;
+    padding: 3px;
+    border-radius: 4px;
+
+}
+
+.titleLDBox {
+    margin-bottom: 15px;
 }
 
 .titleLeft {
     float: left;
-    width: 60%;
-    margin: 15px 0;
+    width: 58%;
+    margin: 10px 0;
 }
 .titleEdit {
     width: 95%;
