--- a/client/views/partials/ld.html
+++ b/client/views/partials/ld.html
@@ -104,12 +104,17 @@
 
 <div id="contentBody">
     <div id="contentHeader">
-        <div class="titleLeft">
-            <h4>{{learningDesign.ld_name }}</h4>
+        <div class="titleLDBox" >
+            <label class="editLabel"><i class="icon-book icon-white"></i> Design name:</label>
+            <h4 class="titleLD">{{learningDesign.ld_name }}</h4>
         </div>
-        <div class="titleRight">
-           <div class="titleQcer" ng-show="learningDesign.qcers"><i class="icon-tasks icon-white"></i><span ng-repeat="qcer in learningDesign.qcers" class="round qceritem ">{{ qcer.qcer_name }}</span></div>
-            <div class="titleScope"><i class="icon-bell icon-white"></i> {{learningDesign.ld_scope }}</div>
+        <div >
+           <div class="titleQcer" ng-show="learningDesign.qcers">
+               <label class="editLabel"><i class="icon-tasks icon-white"></i> QCER Levels:</label>
+                   <span ng-repeat="qcer in learningDesign.qcers" class="round qceritem ">{{ qcer.qcer_name }}</span></div>
+            <div class="titleScope">
+                <label class="editLabel"><i class="icon-bell icon-white"></i> Scope:</label>
+        <span class="titleScopeName">{{learningDesign.ld_scope }}</span></div>
         </div>
         <div class="clearfix"></div>
     </div>
